hphp/hack/test/typecheck/typedef_cycle_indirect.php
<?hh
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 * All rights reserved.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the "hack" directory of this source tree.
 *
 *
 */

type A = B;
type B = C;
type C = D;
type D = A;
